--- a/nodeapp-devsecops/nodeapp-devsecops/.github/workflows/devsecops.yml
+++ b/nodeapp-devsecops/nodeapp-devsecops/.github/workflows/devsecops.yml
@@ -21,7 +21,7 @@ cache: 'npm'
 run: npm ci
 - name: Vérifier que l'app démarre
 run: |
-node app.js &
+node app1.js &
 sleep 2
 curl -sf http://localhost:3000/health || exit 1
 kill %1
@@ -49,7 +49,7 @@ uses: aquasecurity/trivy-action@master
 with:
 image-ref: nodeapp:scan
 format: table
-severity: CRITICAL,HIGH
+severity: CRITICAL
 exit-code: '1'
 # ── Job 4 : Analyse CodeQL
 codeql:
